implementado autenticação JWT e autorização role-based